--- a/src/pages/Pages.module.css
+++ b/src/pages/Pages.module.css
@@ -4,3 +4,15 @@
   flex-wrap: wrap;
   justify-content: space-around;
 }
+
+.container_buttons_prev_next {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.container_buttons_prev_next button {
+  width: 100px;
+}
